<resources>
    <string name="app_name">Novgorod Legends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Загрузка...</string>
    <string name="annotation_app">Вас приветствует интерактивная карта фольклора Новгородскойобласти.
        Это приложение позволяет найти различные местные истории, сказки и городские легенды.
        Исследуйте Новгородскую область вместе с нашей картой!</string>
    <string name="next">Продолжить</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="annotation_sign_up">
        Пожалуйста, введите данные, которые будут отображаться при написании отзывов
    </string>
    <string name="firstname">Имя</string>
    <string name="phone">Номер телефона</string>
    <string name="empty_text">Текст не должен быть пустым</string>

    <string name="map_id">7c7a2a1329c030f1</string>
    <string name="photo_video">Фото и видео</string>
    <string name="audio_guide">Аудио-гид</string>
    <string name="routes">Маршруты</string>
    <string name="reviews">Отзывы</string>
    <string name="profile">Профиль</string>
    <string name="problem_internet">Проблема с интернетом</string>
    <string name="route">Маршруты</string>
    <string name="filter">Фильтр</string>
    <string name="save_edit">Сохранить изменения</string>
    <string name="search">Поиск...</string>
    <string name="type">По типу</string>

    <string name="legends">легенды</string>
    <string name="tradition">предания</string>
    <string name="fairy_tales">сказки</string>
    <string name="lake">озеро</string>
    <string name="source">источник</string>
    <string name="stone">камень</string>
    <string name="other">другое</string>
</resources>